--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img class="prince-img" src="prince images/main-photo.png" alt="" />
           <div class="prince-info">
             <span class="prince-info-icon">Bashier Eisa Bashier</span
-            ><span class="prince-info-text">Elctrical Engiriring</span>
+            ><span class="prince-info-text">Electrical Engineering</span>
           </div>
         </div>
       </div>
